--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -193,7 +193,7 @@
         %div
           %ul.arrow
             %li
-              %a{href: "#"} Company Overview
+              %a{href: ""} Company Overview
             %li
               %a{href: "#"} Meet The Team
             %li
