--- a/app/views/inspirings/index.html.haml
+++ b/app/views/inspirings/index.html.haml
@@ -1,45 +1,44 @@
 .row
-  .col-md-6.col-sm-offset-2#main-slider.no-margin
+  .col-md-8.col-sm-offset-1#main-slider
     .carousel.slide.wet-asphalt
       %ol.carousel-indicators
-        %li.active{"data-slide-to" => "0", "data-target" => "#main-slider"}
-        %li{"data-slide-to"        => "1", "data-target" => "#main-slider"}
-        %li{"data-slide-to"        => "2", "data-target" => "#main-slider"}
+        - @inspirings.each_with_index do |index,ins|
+          - if ins == @inspirings.first
+            %li.active{"data-slide-to" => "#{index}", "data-target" => "#main-slider"}
+          - else    
+            %li{"data-slide-to"        => "#{index}", "data-target" => "#main-slider"} 
+             
+        //%li.active{"data-slide-to" => "0", "data-target" => "#main-slider"}
+        //%li{"data-slide-to"        => "1", "data-target" => "#main-slider"}
+        //%li{"data-slide-to"        => "2", "data-target" => "#main-slider"}
       .carousel-inner
-        .item.active{style: "background-image: url('assets/slider/bg1.jpg')"}
-          .container
-            .row
-              .col-sm-12
-                .carousel-content.centered
-                  %h2.animation.animated-item-1 Mirroring Tirupati
-                  %p.animation.animated-item-2 We are here to server your local needs.
-        / /.item
-        .item{style: "background-image: url(assets/slider/bg2.jpg)"}
-          .container
-            .row
-              .col-sm-12
-                .carousel-content.center.centered
-                  %h2.boxed.animation.animated-item-1 Sell or Advertise anything here
-                  %p.boxed.animation.animated-item-2 MirroringTirupati is a free local classifieds website where you can post free advertisements related a business, product and service offered in and around Tirupati. You can post free ads to buy, sell, rent or for charity in Tirupati. Find used cars, rent or buy apartments, find a flatmate or even start a tiffin or catering service, hobby or dance class or a fashion boutique in your locality and much more..
-                  %br/
-                  %a.btn.btn-md.animation.animated-item-3{href: "#"} Learn More
-        / /.item
-        .item{style: "background-image: url(assets/slider/bg3.jpg)"}
-          .container
-            .row
-              .col-sm-6
-                .carousel-content.centered
-                  %h2.animation.animated-item-1 Powerful and Responsive place to hunt your dream house
-                  %p.animation.animated-item-2 Armchair house hunts have never been simpler. Imagine all the things you can do with your extra time! Death by chocolate at the corner house? Choose your service to start.
-                  %a.btn.btn-md.animation.animated-item-3{href: "#"} Learn More
-              .col-sm-6.hidden-xs.animation.animated-item-4
-                .centered
-                  .embed-container
-        / /.item
-      / /.carousel-inner
-    / /.carousel
+        - @inspirings.each do |ins|
+          - if ins == @inspirings.first
+            .item.active{style: "background-image: url(#{ins.photo.url})"}
+          - else 
+            .item{style: "background-image: url(#{ins.photo.url})"}
+              .container
+                .row
+                  .col-sm-12
+                    .carousel-content.centered
+                      %h2.animation.animated-item-4
+                        = ins.title
+         
     %a.prev.hidden-xs{"data-slide" => "prev", href: "#main-slider"}
-      %i.icon-angle-left
+      %span.glyphicon.glyphicon-chevron-left
     %a.next.hidden-xs{"data-slide" => "next", href: "#main-slider"}
-      %i.icon-angle-right
+      %span.glyphicon.glyphicon-chevron-right
   / /#main-slider
+  .col-md-3
+    %h4 Top 5
+    %div
+      - @inspirings.each do |ins|
+        .media
+          .pull-left
+            %img{alt: "", src: "#{ins.photo.url(:thumb)}"}/
+          .media-body
+            %span.media-heading
+              %a{href: "#"}=  ins.title
+            %small.muted Posted "#{ins.posted_on.strftime('%d %b %Y')}"
+
+      
