final commit for inspiring page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,8 @@
  @import "bootstrap";
  *= require_tree .
  *= require_self
+ *= require font-awesome
+ *= require summernote
  */
 @font-face {
   font-family: 'Glyphicons Halflings';
