--- a/app/assets/stylesheets/inspirings.css.scss
+++ b/app/assets/stylesheets/inspirings.css.scss
@@ -105,3 +105,9 @@ h2.blogpost-wrapper-title, .widget-head {
 h3 {
   margin-top: 0px !important;
 }
+
+.blog .blog-item {
+    background-color: #fff !important;
+    border-radius: 5px !important;
+    margin-bottom: 20px !important;
+}
