--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -1,6 +1,6 @@
 = bootstrap_form_for [:admin, resource], layout: :horizontal, label_col: "col-sm-2", control_col: "col-sm-10" do |f|
   = f.text_field :title, placeholder: "Title"
-  = f.text_area :content, placeholder: "content", class: 'wysihtml5'
+  = f.text_area :content, placeholder: "content",  class:'summernote'
   = f.select :city_id, City.all.map{ |c| [c.name, c.id ] }
   = f.file_field :photo
   = f.date_select :publish_on
