--- a/app/views/admin/posts/index.html.haml
+++ b/app/views/admin/posts/index.html.haml
@@ -6,7 +6,7 @@
           = t('.new_post')
   .row
     .col-sm-5.col-sm-offset-2.col-md-8.col-md-offset-2
-      %table{class: 'table table-striped table-hover table-bordered'}
+      %table{class: 'table table-striped table-hover'}
         %thead
           %tr
             %th= t('.header.title')
