--- a/app/views/inspirings/index.html.haml
+++ b/app/views/inspirings/index.html.haml
@@ -40,7 +40,7 @@
               %li.full-left.clearfix
                 .magbig-thumb
                   %a.post-thumbnail{:href => "/inspirings/#{ins.id}", :title => "#{ins.title}"}
-                    %img{:alt => "#{ins.title}", :src => "#{ins.photo.url(:medium)}", :width=> 280, :height=> 140}/
+                    %img{:alt => "#{ins.title}", :src => "#{ins.photo.url(:medium)}", :width=> 250, :height=> 140}/
                 .list-block.clearfix
                   %h3
                     %a{:href => "/inspirings/#{ins.id}", :title => "#{ins.title}"} #{ins.title}                     
@@ -49,8 +49,10 @@
                     %span.meta_date   September 17, 2014 at 10:00 pm
                   .maga-excerpt.clearfix
                     %p= ins.content 
-                    %a.tpcrn-read-more{:href => "/inspirings/#{ins.id}", :title => "#{ins.title}"} Read More
-              %hr
+                    %a.btn.btn-default{:href => "/inspirings/#{ins.id}"}
+                      Read More
+                      %i.icon-angle-right
+          %hr/
   / /#main-slider
   .col-md-3
     %h2.blogpost-wrapper-title Top Posts
@@ -61,7 +63,7 @@
             %img{alt: "", src: "#{ins.photo.url(:thumb)}"}/
           .media-body
             %span.media-heading
-              %a{href: "#"}=  ins.title
+              %a{href: "/inspirings/#{ins.id}"}=  ins.title
             %small.muted Posted "#{ins.posted_on.strftime('%d %b %Y')}"
 
       
